--- a/champPage.html
+++ b/champPage.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="aboutus.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Login</a>
@@ -55,7 +55,7 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
-                <h3 class="text-center text-uppercase">Champs</h3>
+                <h3 class="text-center text-uppercase">Camps</h3>
 
             </div>
         </section><!-- End Breadcrumbs -->
@@ -64,14 +64,25 @@
             <div class="champ-content">
                 <div class="row ">
                     <div class="col-md-6">
-                        <h4>How the Next Level Challenge Works...</h4>
-                        <p class=" text-secondary">An excellent opportunity for players to come out learn new skills and
-                            grow as a player. We believe youth soccer players who are given more opportunities to work
-                            with the ball at their feet and gain knowledge of the game will become more confident as a
-                            player and enjoy what soccer can provide to them on an individual level.
+                        <h4>Camp Description
+                        </h4>
+                        <ul class=" text-secondary">
+                            <li>-The players will be split into groups based off of birth year or desired level of play.
+                            </li>
+                            <li>-Each day will have its own concept (Soccer Allies Dribbling Concepts, Defensive Third,
+                                Middle Third, and Finishing).
+                            </li>
+                            <li>-Coaches will rotate groups every day so that the players get a feel of different
+                                coaching styles.</li>
+                            <li>-There will be a specific challenge each day that players will have the opportunity to
+                                perfect and win a prize.</li>
+                            <li>-Coaches will elect a Camp MVP for each group which will be based on Character,
+                                Leadership Qualities, and Level of Play.
+                            </li>
+                        </ul>
                     </div>
                     <div class="col-md-6">
-                        <img src="./img/image 9.jpg" width="100%" height="100%" alt="">
+                        <img src="./img/Camp page pic.jpg" width="100%" height="100%" alt="">
                     </div>
                 </div>
             </div>
@@ -85,10 +96,7 @@
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>Contact</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <h2>Want to reach out to a <span>Soccer Allies</span> coach</h2>
             </div>
 
             <div class="row">
@@ -98,25 +106,22 @@
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <h4>Location:</h4>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <p>Oklahoma City - 18509 North Meridian, Edmond, OK. 73012
+                            </p>
                         </div>
 
                         <div class="email">
                             <i class="far fa-envelope"></i>
                             <h4>Email:</h4>
-                            <p>info@example.com</p>
+                            <p>info@soccerallies.com
+                            </p>
+                        </div>
+                        <div class="contact-img">
+                            <img src="./img/undraw_Newsletter_re_wrob.svg" alt="" width="100%" height="100%">
                         </div>
 
-                        <div class="phone">
-                            <i class="fas fa-phone-alt"></i>
-                            <h4>Call:</h4>
-                            <p>+1 5589 55488 55s</p>
-                        </div>
-
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
                     </div>
+
 
                 </div>
 
@@ -154,7 +159,7 @@
     <footer>
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-md-3 col-sm-3 ">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
                         ">
@@ -168,15 +173,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
-                    <p>Year after year, families tell us why they choose Hello Summer as a priority place for their kids
-                        to spend summer holidays at and to have the best time Ever</p>
+                <div class="col-md-3 col-sm-6 footer-m">
+                    <p>“keeping players in the game longer”.</p>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
+                <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
                         <h4>Quicks Link</h4>
                         <ul>
-                            <li><a href="">Resources</a></li>
                             <li><a href="">Privacy</a></li>
                             <li><a href="">Knowledge Center</a></li>
                             <li><a href="">LMS</a></li>
@@ -184,14 +187,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
+                <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
-                        <h4>Quicks Link</h4>
+                        <h4>How to reach us</h4>
                         <ul>
-                            <li><a href="">Office hours: 9:00am – 5:00pm</a></li>
-                            <li><a href="">Telephone: (123) 456-78-90</a></li>
                             <li><a href="">Email:info@soccerallies.com</a></li>
                             <li><a href="">Address: 18509 w meridian Edmond</a></li>
+                            <li class=" text-white"><a href="">.</a></li>
+
 
                         </ul>
                     </div>
