--- a/clinicPage.html
+++ b/clinicPage.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="aboutus.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Login</a>
@@ -63,13 +63,13 @@
         <div class="container">
             <div class="clinics-content">
                 <div class="row">
-                    <div class="col-md-5">
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eREaLvOByfg"
+                    <div class="col-md-6">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NEfDRo3bf0A"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-6">
                         <h4>How the Next Level Challenge Works...</h4>
                         <p class=" text-secondary">The Next Level Challenge is a unique soccer training program
                             designed to help encourage players from the U8-U12 age groups and
@@ -94,7 +94,7 @@
                 </div>
                 <div class="row align-items-center mt-5">
                     <div class="col-md-12 text-center">
-                               <img src="./img/Next level challenge image.PNG" width="100%" height="100%" alt="">
+                        <img src="./img/Next level challenge image.PNG" width="100%" height="100%" alt="">
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>Contact</h2>
+                <h2>Want to reach out to a <span>Soccer Allies</span> coach</h2>
             </div>
 
             <div class="row">
@@ -118,25 +118,22 @@
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <h4>Location:</h4>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <p>Oklahoma City - 18509 North Meridian, Edmond, OK. 73012
+                            </p>
                         </div>
 
                         <div class="email">
                             <i class="far fa-envelope"></i>
                             <h4>Email:</h4>
-                            <p>info@example.com</p>
+                            <p>info@soccerallies.com
+                            </p>
+                        </div>
+                        <div class="contact-img">
+                            <img src="./img/undraw_Newsletter_re_wrob.svg" alt="" width="100%" height="100%">
                         </div>
 
-                        <div class="phone">
-                            <i class="fas fa-phone-alt"></i>
-                            <h4>Call:</h4>
-                            <p>+1 5589 55488 55s</p>
-                        </div>
-
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
                     </div>
+
 
                 </div>
 
@@ -160,11 +157,6 @@
                             <label for="name">Message</label>
                             <textarea class="form-control" name="message" rows="10" required></textarea>
                         </div>
-                        <div class="my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                        </div>
                         <div class="text-center"><button type="submit">Send Message</button></div>
                     </form>
                 </div>
@@ -175,12 +167,11 @@
     </section><!-- End Contact Section -->
 
 
-
     <!-- Footer -->
     <footer>
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-md-3 col-sm-3 ">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
                         ">
@@ -194,15 +185,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
-                    <p>Year after year, families tell us why they choose Hello Summer as a priority place for their kids
-                        to spend summer holidays at and to have the best time Ever</p>
+                <div class="col-md-3 col-sm-6 footer-m">
+                    <p>“keeping players in the game longer”.</p>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
+                <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
                         <h4>Quicks Link</h4>
                         <ul>
-                            <li><a href="">Resources</a></li>
                             <li><a href="">Privacy</a></li>
                             <li><a href="">Knowledge Center</a></li>
                             <li><a href="">LMS</a></li>
@@ -210,14 +199,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
+                <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
-                        <h4>Quicks Link</h4>
+                        <h4>How to reach us</h4>
                         <ul>
-                            <li><a href="">Office hours: 9:00am – 5:00pm</a></li>
-                            <li><a href="">Telephone: (123) 456-78-90</a></li>
                             <li><a href="">Email:info@soccerallies.com</a></li>
                             <li><a href="">Address: 18509 w meridian Edmond</a></li>
+                            <li class=" text-white"><a href="">.</a></li>
+
 
                         </ul>
                     </div>
