--- a/miniAllies.html
+++ b/miniAllies.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="aboutus.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Login</a>
@@ -65,9 +65,9 @@
                 <div class="row">
                     <div class="col-md-6">
                         <iframe width="100%" height="300" src="https://www.youtube.com/embed/eREaLvOByfg"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                         <p class=" text-secondary mt-3">
                             <span> IMPORTANT:</span> ***Your monthly membership will start at the beginning of
                             the next month you
@@ -90,7 +90,7 @@
                         <div class="content text-center">
                             <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1564602740236-PRZJ8XMXEO4KQGKJ2LPH/Screen+Shot+2019-07-31+at+2.51.13+PM.png?format=300w"
                                 alt="" width="90px">
-                            <h5>Mini Allies will return starting April 14th at ScoreOKC!</h5>
+                            <!-- <h5>Mini Allies will return starting April 14th at ScoreOKC!</h5> -->
                             <br>
                             <a href="https://soccerallies.wufoo.com/forms/s7elrsn0shejbd/" class="btnn "
                                 data-initialized="true">click here to register for
@@ -99,7 +99,7 @@
                                 April 14th that will give
                                 parents multiple options for sessions.
                                 <br>
-                                <ul>
+                                <!-- <ul>
                                     <li><a href=""><i class="fas fa-check-double me-2"></i><span>$18</span> – pay as you
                                             play: No
                                             commitment – drop in each session and come have fun
@@ -117,7 +117,7 @@
                                             months for one easy price, 12
                                             sessions – 6 concepts, and have a lot of fun!</a></li>
                                     <hr>
-                                </ul>
+                                </ul> -->
 
 
                                 <br>
@@ -133,7 +133,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="banner-inner ">
-                        <p>Sign up the youngsters to join Ali on a journey through the exciting Mini Allies Program. Players
+                        <p>Sign up the youngsters to join Ali on a journey through the exciting Mini Allies Program.
+                            Players
                             will come against different characters along the way and learn how to defeat each one using
                             certain touches, skills, or moves. A fun way to get players EXCITED ABOUT SOCCER!</p>
                     </div>
@@ -174,7 +175,7 @@
     <section class="misson">
         <div class="container">
             <div class="section-title">
-                <h2>Inovate the SmartLife </h2>
+                <h2>Meet our Mini Allies Director </h2>
             </div>
             <div class="row ">
                 <div class="col-lg-12 pt-1 pt-lg-0">
@@ -195,7 +196,7 @@
                     <br>
 
                     <p class="text-secondary text-start">
-                        Mini Allies is a 12-week program broken into six unique concepts for players <span>BETWEEN THE
+                        Mini Allies is a program broken into six unique concepts for players <span>BETWEEN THE
                             AGES
                             OF
                             4-6</span>. This is not your traditional service for younger children. Instead, the Mini
@@ -268,10 +269,7 @@
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>Contact</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <h2>Want to reach out to a <span>Soccer Allies</span> coach</h2>
             </div>
 
             <div class="row">
@@ -281,25 +279,22 @@
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <h4>Location:</h4>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <p>Oklahoma City - 18509 North Meridian, Edmond, OK. 73012
+                            </p>
                         </div>
 
                         <div class="email">
                             <i class="far fa-envelope"></i>
                             <h4>Email:</h4>
-                            <p>info@example.com</p>
+                            <p>info@soccerallies.com
+                            </p>
+                        </div>
+                        <div class="contact-img">
+                            <img src="./img/undraw_Newsletter_re_wrob.svg" alt="" width="100%" height="100%">
                         </div>
 
-                        <div class="phone">
-                            <i class="fas fa-phone-alt"></i>
-                            <h4>Call:</h4>
-                            <p>+1 5589 55488 55s</p>
-                        </div>
-
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
                     </div>
+
 
                 </div>
 
@@ -337,7 +332,7 @@
     <footer>
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-md-3 col-sm-3 ">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
                         ">
@@ -351,15 +346,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
-                    <p>Year after year, families tell us why they choose Hello Summer as a priority place for their kids
-                        to spend summer holidays at and to have the best time Ever</p>
+                <div class="col-md-3 col-sm-6 footer-m">
+                    <p>“keeping players in the game longer”.</p>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
+                <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
                         <h4>Quicks Link</h4>
                         <ul>
-                            <li><a href="">Resources</a></li>
                             <li><a href="">Privacy</a></li>
                             <li><a href="">Knowledge Center</a></li>
                             <li><a href="">LMS</a></li>
@@ -367,14 +360,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3 footer-m">
+                <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
-                        <h4>Quicks Link</h4>
+                        <h4>How to reach us</h4>
                         <ul>
-                            <li><a href="">Office hours: 9:00am – 5:00pm</a></li>
-                            <li><a href="">Telephone: (123) 456-78-90</a></li>
                             <li><a href="">Email:info@soccerallies.com</a></li>
                             <li><a href="">Address: 18509 w meridian Edmond</a></li>
+                            <li class=" text-white"><a href="">.</a></li>
+
 
                         </ul>
                     </div>
